Updates. Alt+i now starts pass-through mode, for when we need some default shortcuts.

--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -27,61 +27,66 @@
 command=~/git/linux-setup/appconfig/i3/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
-
+# border=#aaaaaa
+# border_top=1
+# border_left=0
+# border_right=0
+# border_bottom=0
+# color=#aaaaaa
 
 [101]
 command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [102]
 command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [103]
 command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [104]
 command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [105]
 command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [106]
 command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [107]
 command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [108]
 command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
@@ -90,28 +95,28 @@ label=ROS_IP
 interval=20
 command=$HOME/.i3/ros_ip.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [rosmasteruri]
 # label=ROS_MASTER
 # interval=20
 # command=$HOME/.i3/ros_master_uri.sh
 color=#000000 # LIGHT COLOR_SCHEME 
-# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [uav_name]
 # #label=UAV_NAME
 # interval=20
 # command=$HOME/.i3/uav_name.sh
 color=#000000 # LIGHT COLOR_SCHEME 
-# color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
 interval=5
 label= 
 command=cat /proc/loadavg | cut -d' ' -f1-1
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Network interface monitoring
 #
@@ -120,14 +125,14 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 [iface]
 instance=enx00133b85141c
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
 [iface]
 instance=wlp58s0
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
 
@@ -146,7 +151,7 @@ separator=true
 interval=20
 command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [memory]
 # label=SWAP
@@ -167,7 +172,7 @@ label=
 #instance=/mnt/data
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 separator=true
 
 
@@ -176,16 +181,16 @@ label=
 command=$HOME/.i3/gpu_selection_display.sh
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 separator=true
 
-[wifi]
-instance=wlan0
-label=
-interval=10
-separator=true
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [wifi]
+# instance=wlan0
+# label=
+# interval=10
+# separator=true
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 #[bandwidth]
 ##instance=eth0
@@ -217,7 +222,7 @@ interval=1
 signal=10
 command=~/.i3/i3blocks/volume 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Battery indicator
 #
@@ -228,14 +233,14 @@ label=
 instance=0
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [keyboard]
 label=
 interval=1
 command=~/.i3/show_keyboard_layout.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # #transparent space for conky
 # [conky]
@@ -245,18 +250,18 @@ color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE
 # Date Time
 #
 [time]
-command=date '+%d.%m.%Y %H:%M:%S'
+command=date '+%d.%m.%Y %a %H:%M:%S'
 interval=1
 separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [clickme]
 full_text= 
 command=~/.i3/shutdown_menu -p rofi
 separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
-color=#ffffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Generic media player support
 #
