--- a/doti3/config
+++ b/doti3/config
@@ -15,8 +15,10 @@ exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
 exec --no-startup-id pa-applet
 exec --no-startup-id redshift-gtk
-exec_always --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
-exec_always --no-startup-id "sleep 5; ~/.i3/conky_start"
+exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
+exec_always  --no-startup-id "killall perl"
+exec_always  --no-startup-id "sleep 2; ~/.i3/conky_start"
+exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
 
 set $mod Mod1
 set $mod2 Mod4
@@ -40,6 +42,13 @@ bindsym $mod+Shift+q kill
 
 # mouse will no longer change focus when pointing on a window 
 focus_follows_mouse no
+
+#for when we need a shortcut that the i3 has overwriten
+mode "pass-through" {
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+i mode "pass-through"
 
 # changing focus of a window
 bindsym $mod+h focus left
@@ -194,7 +203,7 @@ set $background_color         #151515
 set $active_border            #005faf
 set $split_indicator          #B85335
 set $transparent #000000dd
-exec_always --no-startup-id feh --bg-fill ~/pictures/web.jpg
+exec_always --no-startup-id feh --bg-scale ~/pictures/web.jpg
 for_window [class="^.*"] border pixel 1
 # }
 
@@ -214,9 +223,7 @@ for_window [class="desktop"] floating enable
 for_window [class="plasma"] floating enable
 for_window [class="plasma-desktop"] floating enable
 for_window [class="Yakuake"] floating enable
-for_window [class="Yakuake"] border none
 for_window [class="conky"] floating enable
-for_window [class="conky"] border none
 for_window [class="conky"] sticky enable
 for_window [class="conky"] no_focus
 # exec "true /usr/lib/x86_64-linux-gnu/libexec/kf5/start_kdeinit_wrapper --kded && kwrapper5 /usr/bin/ksmserver"
@@ -263,7 +270,7 @@ gaps inner 5
 gaps outer 1
 smart_gaps on
 
-smart_borders on
+# smart_borders on
 
 # kde runner
 # bindsym $mod+F2 exec krunner
