--- a/doti3/config
+++ b/doti3/config
@@ -241,7 +241,7 @@ bar {
   status_command i3blocks -c ~/.i3/i3blocks.conf
     i3bar_command i3bar  
     font pango:lode ,FontAwesome 9
-    height 25
+    # height 25
 
     # font pango:DejaVu Sans Mono, Awesome 8
 
