--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -34,85 +34,85 @@ markup=none
 # border_bottom=0
 # color=#aaaaaa
 
-[101]
-command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [101]
+# command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[102]
-command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [102]
+# command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[103]
-command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [103]
+# command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[104]
-command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [104]
+# command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[105]
-command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [105]
+# command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[106]
-command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [106]
+# command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[107]
-command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [107]
+# command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[108]
-command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [108]
+# command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[rosip]
-label=ROS_IP
-interval=20
-command=$HOME/.i3/ros_ip.sh
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-
-# [rosmasteruri]
-# label=ROS_MASTER
+# [rosip]
+# label=ROS_IP
 # interval=20
-# command=$HOME/.i3/ros_master_uri.sh
-color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# command=$HOME/.i3/ros_ip.sh
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-# [uav_name]
-# #label=UAV_NAME
-# interval=20
-# command=$HOME/.i3/uav_name.sh
-color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# # [rosmasteruri]
+# # label=ROS_MASTER
+# # interval=20
+# # command=$HOME/.i3/ros_master_uri.sh
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
+# # [uav_name]
+# # #label=UAV_NAME
+# # interval=20
+# # command=$HOME/.i3/uav_name.sh
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
-interval=5
+interval=10
 label= 
 command=cat /proc/loadavg | cut -d' ' -f1-1
 # color=#000000 # LIGHT COLOR_SCHEME 
@@ -122,19 +122,19 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-instance=enx00133b85141c
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [iface]
+# instance=enx00133b85141c
+##color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[iface]
-instance=wlp58s0
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [iface]
+# instance=wlp58s0
+##color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
 [online-status]
 command=ping -c 1 google.com >> /dev/null||echo 'No Internet'
@@ -170,27 +170,27 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 [disk]
 label=
 #instance=/mnt/data
-interval=30
+interval=40
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 separator=true
 
 
-[gpu]
-label=
-command=$HOME/.i3/gpu_selection_display.sh
-interval=30
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-separator=true
+# [gpu]
+# label=
+# command=$HOME/.i3/gpu_selection_display.sh
+# interval=30
+## color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# separator=true
 
 # [wifi]
 # instance=wlan0
 # label=
 # interval=10
 # separator=true
-# # color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+## color=#000000 # LIGHT COLOR_SCHEME 
+#color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 #[bandwidth]
 ##instance=eth0
@@ -219,7 +219,7 @@ label=
 instance=Master
 #instance=PCM
 interval=1
-signal=10
+signal=20
 command=~/.i3/i3blocks/volume 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
@@ -231,13 +231,13 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 label=BAT
 label=
 instance=0
-interval=30
+interval=40
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [keyboard]
 label=
-interval=1
+interval=10
 command=~/.i3/show_keyboard_layout.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
@@ -250,8 +250,8 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # Date Time
 #
 [time]
-command=date '+%d.%m.%Y %a %H:%M:%S'
-interval=1
+command=date '+%d.%m.%Y %a %H:%M'
+interval=60
 separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
