--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git@github.com:ViktorWalter/i3_kde_NVI.git
 [submodule "doti3/i3scripts"]
 	path = doti3/i3scripts
-	url = git@github.com:justbuchanan/i3scripts.git
+	url = https://github.com/justbuchanan/i3scripts.git
 [submodule "doti3/conky-draw"]
 	path = doti3/conky-draw
 	url = https://github.com/fisadev/conky-draw.git
