--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -101,15 +101,15 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # label=ROS_MASTER
 # interval=20
 # command=$HOME/.i3/ros_master_uri.sh
-color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
 
 # [uav_name]
 # #label=UAV_NAME
 # interval=20
 # command=$HOME/.i3/uav_name.sh
-color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
 
 [load]
 interval=5
@@ -189,8 +189,8 @@ separator=true
 # label=
 # interval=10
 # separator=true
-# # color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
 
 #[bandwidth]
 ##instance=eth0
