--- a/doti3/config
+++ b/doti3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
-exec --no-startup-id yakuake
+# exec --no-startup-id yakuake
 # exec "sleep 4; launchy"
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
@@ -24,13 +24,7 @@ exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
 set $mod Mod1
 set $mod2 Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below. ISO 10646 = Unicode
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, if you need a lot of unicode glyphs or
-# right-to-left text rendering, you should instead use pango for rendering and
-# chose a FreeType font, such as:
+font pango:lode ,FontAwesome 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -362,17 +356,74 @@ bindsym $mod+Ctrl+i exec urxvt -e ~/.i3/setColorScheme.sh
 
 #Printscreen
 bindsym Print exec scrot -e 'mv $f ~/Pictures/'
+#{ Control the mouse with keyboard
 
-#control the mouse with keyboard
-bindsym $mod2+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
-bindsym $mod2+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
-bindsym $mod2+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
-bindsym $mod2+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
-bindsym $mod2++shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -100 0
-bindsym $mod2+shift++l exec --no-startup-id xdotool mousemove_relative --sync -- 100 0
-bindsym $mod2+shift++j exec --no-startup-id xdotool mousemove_relative --sync -- 0 100
-bindsym $mod2+shift++k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -100
-bindsym $mod2+u exec --no-startup-id xdotool click 1
-bindsym $mod2+i exec --no-startup-id  xdotool click 3
-#Banish the mouse pointer to the corner of the current window - removes the distracting cursor or summons it closer for specific tasks
+mode "longpress" {
+
+  # slow drag
+  bindsym h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
+  bindsym j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
+  bindsym k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
+  bindsym l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
+  # fast drag
+  bindsym shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -25 0
+  bindsym shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 25
+  bindsym shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -25
+  bindsym shift+l exec --no-startup-id xdotool mousemove_relative --sync -- 25 0
+
+  bindsym r exec --no-startup-id xdotool mouseup 1; mode "mouse"
+  bindsym Escape mode "mouse"
+}
+
+# resize window (you can also use the mouse for that)
+
+mode "mouse" {
+  # slow move
+  bindsym h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
+  bindsym j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
+  bindsym k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
+  bindsym l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
+
+  # fast move
+  bindsym shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -25 0
+  bindsym shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 25
+  bindsym shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -25
+  bindsym shift+l exec --no-startup-id xdotool mousemove_relative --sync -- 25 0
+
+  bindsym $mod+h focus left
+  bindsym $mod+j focus down
+  bindsym $mod+k focus up
+  bindsym $mod+l focus right
+
+  # bindsym $mod2+space exec --no-startup-id xdotool click 1
+  bindsym f exec --no-startup-id xdotool click 1
+  bindsym d exec --no-startup-id xdotool click 3
+  bindsym u exec --no-startup-id xdotool click 1
+  bindsym i exec --no-startup-id xdotool click 3
+
+  bindsym $mod+n workspace next_on_output
+  bindsym $mod+m workspace prev_on_output
+
+  # back to normal: Enter or Escape
+  bindsym Escape mode "default"
+  bindsym r exec --no-startup-id xdotool mousedown 1; mode "longpress"
+
+  # Banish the mouse pointer to the corner of the current window - removes the distracting cursor or summons it closer for specific tasks
+  bindsym b exec --no-startup-id ~/.i3/banishMouse.sh
+}
+bindsym $mod+c mode "mouse"
+
+#}
+# #control the mouse with keyboard
+# bindsym $mod2+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
+# bindsym $mod2+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
+# bindsym $mod2+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
+# bindsym $mod2+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
+# bindsym $mod2++shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -100 0
+# bindsym $mod2+shift++l exec --no-startup-id xdotool mousemove_relative --sync -- 100 0
+# bindsym $mod2+shift++j exec --no-startup-id xdotool mousemove_relative --sync -- 0 100
+# bindsym $mod2+shift++k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -100
+# bindsym $mod2+u exec --no-startup-id xdotool click 1
+# bindsym $mod2+i exec --no-startup-id  xdotool click 3
+# #Banish the mouse pointer to the corner of the current window - removes the distracting cursor or summons it closer for specific tasks
 bindsym $mod2+b exec --no-startup-id ~/.i3/banishMouse.sh
