--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -102,14 +102,14 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # interval=20
 # command=$HOME/.i3/ros_master_uri.sh
 ## color=#000000 # LIGH_T COLOR_SCHEME 
-# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 # [uav_name]
 # #label=UAV_NAME
 # interval=20
 # command=$HOME/.i3/uav_name.sh
 ## color=#000000 # LIGH_T COLOR_SCHEME 
-# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 [load]
 interval=5
@@ -190,7 +190,7 @@ separator=true
 # interval=10
 # separator=true
 ## color=#000000 # LIGH_T COLOR_SCHEME 
-# color=#00bffaff # JELLYBEAN_S COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 #[bandwidth]
 ##instance=eth0
