--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -34,61 +34,61 @@ markup=none
 # border_bottom=0
 # color=#aaaaaa
 
-[101]
-command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [101]
+# command=ping -c 1 192.168.0.101 >> /dev/null && echo '101' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[102]
-command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [102]
+# command=ping -c 1 192.168.0.102 >> /dev/null && echo '102' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[103]
-command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [103]
+# command=ping -c 1 192.168.0.103 >> /dev/null && echo '103' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[104]
-command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [104]
+# command=ping -c 1 192.168.0.104 >> /dev/null && echo '104' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[105]
-command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [105]
+# command=ping -c 1 192.168.0.105 >> /dev/null && echo '105' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[106]
-command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [106]
+# command=ping -c 1 192.168.0.106 >> /dev/null && echo '106' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[107]
-command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [107]
+# command=ping -c 1 192.168.0.107 >> /dev/null && echo '107' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
-[108]
-command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
-interval=10
-separator=true
+# [108]
+# command=ping -c 1 192.168.0.108 >> /dev/null && echo '108' || echo ""
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# interval=10
+# separator=true
 
 [rosip]
 label=ROS_IP
