--- a/doti3/config
+++ b/doti3/config
@@ -332,10 +332,10 @@ assign [class="Rviz"] $workspace4
 for_window [class="^Tk$"] floating enable
 
 # imshow windows to window n.8
-assign [title="cv_*"] $workspace8
+assign [title="cv_*"] 8
 for_window [title="cv_*"] floating disable
 for_window [title="cv_*"] border none
-# for_window [title="cv_*"] fullscreen enable
+for_window [title="cv_*"] fullscreen enable
 for_window [title="cv_fl_*"] floating enable
 for_window [title="cv_fl_*"] fullscreen disable
 
