--- a/doti3/config
+++ b/doti3/config
@@ -458,5 +458,5 @@ bindsym $mod3+shift+z exec --no-startup-id xdotool click 1
 bindsym $mod3+shift+a exec --no-startup-id xdotool click 3
 bindsym $mod3+Shift+s exec --no-startup-id xdotool mousedown 1; mode "longpress"
 
-bindsym $mod3+u exec --no-startup-id xdotool click 5
-bindsym $mod3+i exec --no-startup-id xdotool click 4
+bindsym $mod3+Shift+u exec --no-startup-id xdotool click 5
+bindsym $mod3+Shift+i exec --no-startup-id xdotool click 4
