--- a/doti3/config
+++ b/doti3/config
@@ -436,6 +436,9 @@ bindsym $mod+c mode "mouse"
 # #Banish the mouse pointer to the corner of the current window - removes the distracting cursor or summons it closer for specific tasks
 
 
+set $slow 10
+set $fast 100
+
 bindsym $mod+minus scratchpad show
 bindsym $mod+Shift+minus move scratchpad
 
@@ -443,20 +446,24 @@ bindsym $mod3+b exec --no-startup-id ~/.i3/banishMouse.sh
 bindsym $mod4+r exec ~/.i3/setKeyboard.sh
 
 
-bindsym $mod3+ctrl+shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -10 0
-bindsym $mod3+Ctrl+shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 10
-bindsym $mod3+Ctrl+shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -10
-bindsym $mod3+Ctrl+shift+l exec --no-startup-id xdotool mousemove_relative --sync -- 10 0
+bindsym $mod3+ctrl+shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$slow 0
+bindsym $mod3+Ctrl+shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $slow
+bindsym $mod3+Ctrl+shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$slow
+bindsym $mod3+Ctrl+shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $slow 0
 
 # fast move
-bindsym $mod3+Shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -25 0
-bindsym $mod3+Shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 25
-bindsym $mod3+Shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -25
-bindsym $mod3+Shift+l exec --no-startup-id xdotool mousemove_relative --sync -- 25 0
+bindsym $mod3+Shift+h exec --no-startup-id xdotool mousemove_relative --sync -- -$fast 0
+bindsym $mod3+Shift+j exec --no-startup-id xdotool mousemove_relative --sync -- 0 $fast
+bindsym $mod3+Shift+k exec --no-startup-id xdotool mousemove_relative --sync -- 0 -$fast
+bindsym $mod3+Shift+l exec --no-startup-id xdotool mousemove_relative --sync -- $fast 0
 
 bindsym $mod3+shift+z exec --no-startup-id xdotool click 1
 bindsym $mod3+shift+a exec --no-startup-id xdotool click 3
+bindsym $mod3+z exec --no-startup-id xdotool click 1
+bindsym $mod3+a exec --no-startup-id xdotool click 3
 bindsym $mod3+Shift+s exec --no-startup-id xdotool mousedown 1; mode "longpress"
 
 bindsym $mod3+Shift+u exec --no-startup-id xdotool click 5
 bindsym $mod3+Shift+i exec --no-startup-id xdotool click 4
+bindsym $mod3+u exec --no-startup-id xdotool click 5
+bindsym $mod3+i exec --no-startup-id xdotool click 4
