Updated monitor layout automator

--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -90,6 +90,13 @@ color=#000000 # LIGHT COLOR_SCHEME
 # interval=10
 # separator=true
 
+[BTC]
+interval=300
+command=echo "$(curl -s https://api.coindesk.com/v1/bpi/currentprice/eur.json | grep -o 'EUR","rate":"[^"]*' | cut -d\" -f5 | cut -d. -f1) €"
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
+
 [rosip]
 label=ROS_IP
 interval=20
