--- a/dottmux.conf
+++ b/dottmux.conf
@@ -51,3 +51,8 @@ setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
 # }
+#
+bind -r C-H resize-pane -L 5
+bind -r C-J resize-pane -D 5
+bind -r C-K resize-pane -U 5
+bind -r C-L resize-pane -R 5
