--- a/doti3/config
+++ b/doti3/config
@@ -23,12 +23,14 @@ exec_always  --no-startup-id "killall perl"
 exec_always  --no-startup-id "sleep 2; ~/.i3/conky_start"
 exec_always  --no-startup-id "sleep 2; ~/.i3/border_control"
 
+exec --no-startup-id ~/mount_windata.sh
+
 set $mod Mod1
 set $mod2 Mod4
 set $mod3 Mod5
 set $mod4 Mod2
 
-font pango:lode ,FontAwesome 9
+font pango:Terminus Bold, FontAwesome 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -283,7 +285,7 @@ for_window [class="gnome-calendar"] floating enable
 bindsym Ctrl+Escape exec ksysguard
 
 # rofi launcher
-bindsym $mod+d exec "rofi -combi-modi drun,run -show combi -modi combi -location 2 -terminal urxvt -run-list-command ~/.i3/rofi_commands -font 'Raize 15' -show-icons True"
+bindsym $mod+d exec "rofi -combi-modi drun,run -show combi -modi combi -location 2 -terminal urxvt -run-list-command ~/.i3/rofi_commands -font 'Terminus Bold 15' -show-icons True"
 
 # Pulse Audio controls
 bindsym $mod+F6 exec --no-startup-id pactl -- set-sink-volume 0 +10% #increase sound volume
@@ -342,7 +344,7 @@ bindsym $mod+Shift+x exec ~/.i3/shutdown_menu -p rofi
 # \ -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Liberation Mono 18"
 
 # enables transparency
-exec --no-startup-id compton -f -D 3
+exec --no-startup-id compton --config ~/.config/compton.conf -b
 
 # show background wallpaper
 #exec_always --no-startup-id feh --bg-fill /usr/share/wallpapers/Next/contents/images/1920x1080.png
