--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -92,7 +92,13 @@ color=#000000 # LIGHT COLOR_SCHEME
 
 [BTC]
 interval=300
-command=echo "$(curl -s https://api.coindesk.com/v1/bpi/currentprice/eur.json | grep -o 'EUR","rate":"[^"]*' | cut -d\" -f5 | cut -d. -f1) €"
+command=echo " B $(curl rate.sx/1BTC)€"
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
+[ETH]
+interval=300
+command=echo "E $(curl rate.sx/1ETH)€"
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
