--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -92,13 +92,19 @@ color=#000000 # LIGHT COLOR_SCHEME
 
 [BTC]
 interval=300
-command=echo " B $(curl rate.sx/1BTC)€"
+command=echo " B $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1BTC`)€"
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [ETH]
 interval=300
-command=echo "E $(curl rate.sx/1ETH)€"
+command=echo "E $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1ETH`)€"
+# color=#000000 # LIGHT COLOR_SCHEME 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
+[USDT]
+interval=300
+command=echo "U $(sleep 2; printf "%.2f\n" `curl usd.rate.sx/1USD`)$"
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
