--- a/doti3/config
+++ b/doti3/config
@@ -18,6 +18,7 @@ exec --no-startup-id cadence
 exec --no-startup-id pa-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id cbatticon
+# exec --no-startup-id ~/mount_windata.sh
 exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
 exec_always  --no-startup-id "killall perl"
 exec_always  --no-startup-id "sleep 2; ~/.i3/conky_start"
@@ -229,6 +230,7 @@ for_window [class="conky"] no_focus
 
 for_window [class="lazarus"] floating enable
 for_window [class="Lazarus"] floating enable
+for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
 
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
