--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -92,7 +92,7 @@ color=#000000 # LIGHT COLOR_SCHEME
 
 [BTC]
 interval=300
-command=echo " B $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1BTC`)€"
+command=echo "B $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1BTC`)€"
 # color=#000000 # LIGHT COLOR_SCHEME 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
@@ -165,7 +165,7 @@ interval=20
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=🞕
+label=
 separator=true
 interval=20
 command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
