--- a/doti3/fonts.conf
+++ b/doti3/fonts.conf
@@ -1,18 +1,17 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-  <match target="font">
-      <test name="size" qual="any" compare="less">
-        <double>10</double>
-      </test>
-      <edit mode="assign" name="antialias">
-        <bool>false</bool>
-      </edit>
-  </match>
-
-  <match target="font">
-      <edit mode="assign" name="hintstyle">
-        <const>hintfull</const>
-      </edit>
-  </match>
+ <match target="font">
+  <test qual="any" compare="less" name="size">
+   <double>12</double>
+  </test>
+  <edit mode="assign" name="antialias">
+   <bool>false</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit mode="assign" name="hintstyle">
+   <const>hintfull</const>
+  </edit>
+ </match>
 </fontconfig>
