--- a/doti3/config
+++ b/doti3/config
@@ -231,6 +231,7 @@ for_window [class="conky"] no_focus
 for_window [class="lazarus"] floating enable
 for_window [class="Lazarus"] floating enable
 for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
+# for_window [class="MATLAB R2015a" title="^Fig"] floating enable
 
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
