--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -90,23 +90,23 @@ color=#000000 # LIGHT COLOR_SCHEME
 # interval=10
 # separator=true
 
-[BTC]
-interval=300
-command=echo "B $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1BTC`)€"
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [BTC]
+# interval=300
+# command=echo "B $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1BTC`)€"
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-[ETH]
-interval=300
-command=echo "E $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1ETH`)€"
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [ETH]
+# interval=300
+# command=echo "E $(sleep 2; printf "%.2f\n" `curl eur.rate.sx/1ETH`)€"
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
-[USDT]
-interval=300
-command=echo "U $(sleep 2; printf "%.2f\n" `curl usd.rate.sx/1USD`)$"
-# color=#000000 # LIGHT COLOR_SCHEME 
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [USDT]
+# interval=300
+# command=echo "U $(sleep 2; printf "%.2f\n" `curl usd.rate.sx/1USD`)$"
+# # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 
 [rosip]
