--- a/doti3/nmdmenuconfig.ini
+++ b/doti3/nmdmenuconfig.ini
@@ -1,6 +1,6 @@
 [dmenu]
-fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
-# dmenu_command = /usr/bin/dmenu
+#fn = -*-Terminus-medium-*-*-*-16-*-*-*-*-*-*-*
+dmenu_command = rofi -location 5 -font 'Terminus Bold 15' -width 20
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
 # # Rofi and dmenu are set to case insensitive by default `-i`
 # l = number of lines to display, defaults to number of total network options
@@ -14,6 +14,7 @@ fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
 # p = Custom Prompt for the networks menu
 # pinentry = Pinentry command
 # rofi_highlight = <True or False> # (Default: False) use rofi highlighting instead of '**'
+rofi_highlight = True
 
 # # override normal foreground and background colors (dmenu) or use the
 # # -password option (rofi) to obscure passphrase entry
@@ -23,7 +24,7 @@ fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
 # rofi_obscure = True
 
 [editor]
-terminal = urxvtc
-gui_if_available = True
+terminal = urxvt
+gui_if_available = False
 # terminal = <name of terminal program>
 # gui_if_available = <True or False>
