--- a/doti3/config
+++ b/doti3/config
@@ -16,7 +16,7 @@ exec --no-startup-id blueman-applet
 exec --no-startup-id pulseaudio
 exec --no-startup-id cadence
 exec --no-startup-id pa-applet
-exec --no-startup-id redshift-gtk
+# exec --no-startup-id redshift-gtk
 exec --no-startup-id cbatticon
 # exec --no-startup-id ~/mount_windata.sh
 exec_always  --no-startup-id python3.5 ~/.i3/my_autoname_workspaces.py &
@@ -234,7 +234,8 @@ for_window [class="conky"] no_focus
 for_window [class="lazarus"] floating enable
 for_window [class="Lazarus"] floating enable
 for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
-# for_window [class="MATLAB R2015a" title="^Fig"] floating enable
+for_window [class="MATLAB R2015a" title="^Fig"] floating enable
+for_window [class="Gazeb"] move to workspace number 8
 
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
